<resources>
    <string name="app_name">Mankomania</string>
    <string name="passwort">Passwort</string>
    <string name="email">E-Mail</string>
    <string name="Login">Login</string>
    <string name="gamescore_heading">Willkommen bei Mankomania!</string>
    <string name="ResumeGame">Spiel fortsetzen</string>
    <string name="StartNewGame">neues Spiel starten</string>
    <string name="ChooseYourCharacter_heading">Choose your Character</string>
    <string name="ChooseYourCharacter_PurplePlayer">Lila</string>
    <string name="ChooseYourCharacter_GreenPlayer">Grün</string>
    <string name="ChooseYourCharacter_BluePlayer">Blau</string>
    <string name="ChooseYourCharacter_OrangePlayer">Orange</string>
    <string name="Start">Start</string>
    <string name="FinancesStocks_ReturnToBoard">zurück zum Spielfeld</string>
    <string name="Kontostand">Kontostand:</string>
    <string name="CurrentPlayer">Wer ist dran?</string>
    <string name="Board_ToFinancesAndStocks"><![CDATA[Finanzen & Aktien]]></string>
    <string name="Finances_5kbillstxt">5.000€ Noten:</string>
    <string name="Finances_10kbillstxt">10.000€ Noten:</string>
    <string name="Finances_50kbillstxt">50.000€ Noten:</string>
    <string name="Finances_100kbillstxt">100.000€ Noten:</string>
    <string name="Finances_totaltxt">gesamt:</string>
    <string name="Spielbrett">Spielbrett</string>
    <string name="Finances_heading">Finanzen</string>
    <string name="Stocks_heading">Aktien</string>
    <string name="Stocks_KurzschulssAGtxt">Kurzschluss-Versorgungs-AG:</string>
    <string name="Stocks_TrockenölAGtxt">Trockenöl-AG:</string>
    <string name="Stocks_BruchstahlAGtxt">Bruchstahl-AG:</string>
    <string name="Logout">Logout</string>
    <string name="Register">Registrieren</string>
    <string name="Register_Heading">Registrierung</string>
    <string name="Login_ZurRegistrierung">Zur Registrierung</string>
    <string name="Wuerfeln">Würfeln</string>
    <string name="RollDice_resultTxt">Dein Ergebnis lautet:</string>
    <string name="field_1_description">Gehe an die Börse!</string>
    <string name="field_2_description">Gehe zum Pferderennen!</string>
    <string name="field_3_description">Kaufe eine Aktie der Kurzschluss-Versorgungs AG! Zahle 100.000€</string>
    <string name="field_4_description">Beauftrage Saylor Twift damit, dir einen Klingelton zu komponieren. Zahle 70.000€</string>
    <string name="field_5_description">Gehe ins Casino!</string>
    <string name="field_6_description">Dein Buch „Geld verjubeln leicht gemacht!“ ist ein Bestseller! Kassiere 5.000€</string>
    <string name="field_7_description">Böse 1</string>
    <string name="field_8_description">Kaufe eine Aktie der Bruchstahl AG! Zahle 100.000€</string>
    <string name="field_9_description">Gehe zur Bösen 1!</string>
    <string name="field_10_description">Hotel A</string>
    <string name="field_11_description">Deine Eltern haben Hochzeitstag! Überrasche sie mit einer VIP-Weltreise. Zahle 100.000€</string>
    <string name="field_12_description">Gehe zur Lotterie!</string>
    <string name="field_13_description">Dein Personal Trainer nimmt dich zu hart ran. Gehe zum Osteopathen. Zahle 50.000€</string>
    <string name="field_14_description">Gehe an die Börse!</string>
    <string name="field_15_description">Dein Hamster stirbt und die Nagetierversicherung zahlt. Kassiere 10.000€</string>
    <string name="field_16_description">Lege mit deiner Yacht im Hafen von Monaco an. Zahle 50.000€</string>
    <string name="field_17_description">Gehe zum Pferderennen!</string>
    <string name="field_18_description">Hotel B</string>
    <string name="field_19_description">Gehe ins Casino!</string>
    <string name="field_20_description">Gönne dir einen mit Champagner gefüllten Jacuzzi. Zahle 60.000€</string>
    <string name="field_21_description">Verwöhne dein Pony mit Beinwärmern aus Kaschmir! Zahle 50.000€</string>
    <string name="field_22_description">Du bist auf einem Kavier-Schnittchen ausgerutscht. Kassiere 10.000€</string>
    <string name="field_23_description">Gehe zur Bösen 1!</string>
    <string name="field_24_description">Kaufe eine Aktie der Trockenöl AG! Zahle 100.000€</string>
    <string name="field_25_description">Lotterie</string>
    <string name="field_26_description">Titel gewonnen! „Begossenster Pudel des Jahres“ bei der World Dog Show. Kassiere 10.000€</string>
    <string name="field_27_description">Kaufe eine Aktie der Kurzschluss-Versorgungs AG! Zahle 100.000€</string>
    <string name="field_28_description">Hotel C</string>
    <string name="field_29_description">Exklusives Fotoshooting für ein Hochglanzmagazin. Kassiere 50.000€</string>
    <string name="field_30_description">Gönne dir eine goldene Handyhülle. Zahle 50.000€</string>
    <string name="field_31_description">Kaufe eine Aktie der Bruchstahl AG! Zahle 100.000€</string>
    <string name="field_32_description">Gehe zum Auktionshaus!</string>
    <string name="field_33_description">Kaufe Anteile an einem Rennpferd! Zahle 50.000€</string>
    <string name="field_34_description">Gehe zur Lotterie!</string>
    <string name="field_35_description">Du bist der einmillionste Kunde bei „Edel und Teuer“. Du gewinnst 10.000€</string>
    <string name="field_36_description">Kaufe eine Aktie der Trockenöl AG! Zahle 100.000€</string>
    <string name="field_37_description">Gehe an die Börse!</string>
    <string name="field_38_description">Deine Oma benötigt ein neues Facelifting. Zahle 80.000€</string>
    <string name="field_39_description">Verwöhne dich bei Juwelier „Bling, Bling und Bling“. Zahle 100.000€</string>
    <string name="field_40_description">Alles Gute zum Geburtstag! Erhalte von jedem Mitspieler 5.000€</string>
    <string name="field_41_description">Hotel E</string>
    <string name="field_42_description">Kaufe eine Aktie der Trockenöl AG! Zahle 100.000€</string>
    <string name="field_43_description">Gehe zum Auktionshaus!</string>
    <string name="field_44_description">Zahle 25.000€ Kaution für den Mörder des toten Meeres</string>
    <string name="field_45_description">Feld Auktionshaus</string>
    <string name="field_46_description">Feld Pferderennen</string>
    <string name="field_47_description">Feld Börse</string>
    <string name="field_48_description">Feld Casino</string>
    <string name="field_49_description">Startfeld blau</string>
    <string name="field_50_description">Startfeld grün</string>
    <string name="field_51_description">Startfeld lila</string>
    <string name="field_52_description">Startfeld rot</string>
</resources>