<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:backgroundTint="@color/toolBar_background"
    android:elevation="8dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/Board_ToFinancesAndStocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="6dp"
        android:text="@string/Board_ToFinancesAndStocks" />

    <TextView
        android:id="@+id/KontostandTxt"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Kontostand"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Kontostand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/CurrentPlayerQuestion"
        android:layout_width="7dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/CurrentPlayer"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/CurrentPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp" />
    <Button
        android:id="@+id/Board_LogoutButton"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_weight="1"
        android:layout_marginEnd="5dp"
        android:text="@string/Logout" />
</LinearLayout>
