<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.FinancesAndStocks">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="362dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="9dp"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Finances_header"
                    android:layout_width="0dp"
                    android:layout_height="45sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Finances_heading"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Finances_5kbillsTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Finances_5kbillstxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Finances_5kbillsAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Finances_10kbillsTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Finances_10kbillstxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Finances_10kbillsAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Finances_50kbillsTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Finances_50kbillstxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Finances_50kbillsAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Finances_100kbillsTxt"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:text="@string/Finances_100kbillstxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Finances_100kbillsAnswer"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Finances_totalTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Finances_totaltxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Finances_totalAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="460dp"
        android:layout_height="362dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Stocks_header"
                    android:layout_width="0dp"
                    android:layout_height="45sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/Stocks_heading"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Stocks_KurzschulssAGTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Stocks_KurzschulssAGtxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Stocks_KurzschulssAGAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Stocks_TrockenoelAGTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Stocks_TrockenölAGtxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Stocks_TrockenoelAGAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Stocks_BruchstahlAGTxt"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:text="@string/Stocks_BruchstahlAGtxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Stocks_BruchstahlAGAnswer"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Stocks_totalTxt"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:text="@string/Finances_totaltxt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/Stocks_totalAnswer"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:backgroundTint="@color/toolBar_background"
            android:elevation="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/FinancesStocks_BackToBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="6dp"
                android:text="@string/FinancesStocks_ReturnToBoard" />

            <TextView
                android:id="@+id/KontostandTxt"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Kontostand"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Kontostand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/CurrentPlayerQuestion"
                android:layout_width="7dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CurrentPlayer"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/CurrentPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/FinancesStocks_LogoutButton"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/Logout" />
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>